@@ -1,3 +1,7 @@
+2006-04-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fix bugtracker issue 3172: re-write getMimeType in t3lib_htmlmail
+
 2006-04-12  Ingmar Schlecht <ingmar@typo3.org>
 
 	* Fixed bug #3174: chr() was misspelled char() in t3lib_div
